--- a/DropShell.csproj
+++ b/DropShell.csproj
@@ -8,4 +8,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\BuiltIn\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
