Implemented help and pwd command, added LogCommand() method to output service for command outputs

--- a/DropShell.csproj
+++ b/DropShell.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Commands\BuiltIn\kymqrluq.vjd~" />
     <None Remove="favicon.ico" />
   </ItemGroup>
 
