Updated .gitignore, Added default config .json file, Updated README to display the latest version of the default config and all commands

--- a/DropShell.csproj
+++ b/DropShell.csproj
@@ -21,4 +21,11 @@
     <Resource Include="favicon.ico" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Config\dropshell.json" />
+    <Content Include="Config\dropshell.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
