--- a/DropShell.csproj
+++ b/DropShell.csproj
@@ -1,31 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net8.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseWPF>true</UseWPF>
+		<Version>1.0.0</Version>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Commands\BuiltIn\kymqrluq.vjd~" />
-    <None Remove="favicon.ico" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Commands\BuiltIn\kymqrluq.vjd~" />
+		<None Remove="favicon.ico" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Hardcodet.Wpf.TaskbarNotification" Version="1.0.5" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Hardcodet.Wpf.TaskbarNotification" Version="1.0.5" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Resource Include="favicon.ico" />
-  </ItemGroup>
+	<ItemGroup>
+		<Resource Include="favicon.ico" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Remove="Config\dropshell.json" />
-    <Content Include="Config\dropshell.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Config\dropshell.json" />
+		<Content Include="Config\dropshell.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
 </Project>
