--- a/DropShell.csproj
+++ b/DropShell.csproj
@@ -15,10 +15,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Hardcodet.Wpf.TaskbarNotification" Version="1.0.5" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<Resource Include="favicon.ico" />
 	</ItemGroup>
 
@@ -27,6 +23,10 @@
 		<Content Include="Config\dropshell.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="H.NotifyIcon.Wpf" Version="2.4.1" />
 	</ItemGroup>
 
 </Project>
